# ros2-robot-navigation-exploration

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs-deploy.yml  docs.yml  security-scan.yml
docs/: API.md  INSTALLATION.md  TUTORIAL.md  build_docs.sh  conf.py  conf_simple.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/videos/: README.md
src/first_pkg/: package.xml  setup.py
src/first_pkg/config/: build_map.rviz  display_robot_model.rviz  infrared_mapping_fast.yaml  laser_mapping.yaml  mapper_params_online_sync.yaml  nav2_params.yaml  pid_navigation_params.yaml  ultra_fast_mapping.yaml
src/first_pkg/first_pkg/: RRT_target_selection.py  astar_planner.py  bezier_smoother.py  dwa_planner.py  main.py  pid_navigator.py
src/first_pkg/launch/: display_robot.launch.py  gazebo_sim.launch.py  lightweight_mapping.launch.py  spawn_lidar.launch.py
src/first_pkg/map/: world_9_2.world
src/first_pkg/map/building_editor_models/fix_wall1/: model.config  model.sdf
src/first_pkg/map/building_editor_models/fix_wall2/: model.config  model.sdf
src/first_pkg/map/building_editor_models/fix_wall3/: model.config  model.sdf
src/first_pkg/map/office_space/: model.config  model.sdf
src/first_pkg/map/room/new_room/: model.sdf
src/first_pkg/models/aerial_lidar/: model.config  model.sdf
src/first_pkg/urdf/: first_robot.urdf  first_robot.xacro
src/first_pkg/urdf/robot/: base.urdf.xacro  common_inertial.xacro  dong_robot.urdf.xacro
src/first_pkg/urdf/robot/actor/: caster.urdf.xacro  wheel.urdf.xacro
src/first_pkg/urdf/robot/plugins/: gazebo_control_plugin.xacro  gazebo_infrared_plugin.xacro  gazebo_sensor_plugin.xacro
src/first_pkg/urdf/robot/sensor/: camera.urdf.xacro  imu.urdf.xacro  infrared_sensor.urdf.xacro  laser.urdf.xacro
