<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>first_pkg</name>
  <version>0.0.0</version>
  <description>ROS2 Robot Navigation and Exploration System</description>
  <maintainer email="dchengteng@gmail.com">dong</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <!-- <depend>sensor_msgs</depend> -->
  <!-- <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_plugins</depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
